--- a/src/style/component/_customlist-group.scss
+++ b/src/style/component/_customlist-group.scss
@@ -1,6 +1,9 @@
 .customlist-group {
   display: flex;
   flex-direction: column;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  overflow: auto;
 }
 
 
