--- a/src/style/component/_sidebar.scss
+++ b/src/style/component/_sidebar.scss
@@ -5,9 +5,9 @@
   flex: none;
   width: 18rem;
   height: 100vh;
-  @media (max-width:900px){
-    display: none;
-  }
+  // @media (max-width:900px){
+  //   display: none;
+  // }
   &-footer{
     width: inherit;
     bottom: 0;
