--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&display=swap');
+
 input {
   display: block;
+  color: #464646;
 }
 html {
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: 14px;
 }
 
@@ -20,4 +24,14 @@ html {
 
 .bb{
   border-bottom: .02rem solid #e4e4e4;
+}
+.bb-light{
+  border-bottom: .02rem solid #f0f0f0;
+}
+.line-break{
+  margin-bottom: 1rem;
+}
+
+.h1,h2,h3{
+  font-weight: 700;
 }
