1.修改drag的block資訊以及邏輯移動到block組件 2.新增block圖標 3.新增AreaSelect組件，可框選block並且刪除 4.通用DOM以及Arr功能移植commonEffect.js

--- a/src/style/component/_customlist-group.scss
+++ b/src/style/component/_customlist-group.scss
@@ -64,6 +64,7 @@
 
 // 單個list裡面的文字
 .customlist-item {
-  padding: 0 .25rem;
+  padding-left: .25rem;
+  padding-right: .25rem;
   color: #6b6b6b;
 }
