--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -35,3 +35,18 @@ html {
 .h1,h2,h3{
   font-weight: 700;
 }
+
+.block-selected{
+  background:rgba($color: rgb(131, 214, 235), $alpha: 0.2);
+  border-radius: .2rem;
+}
+
+[draggable="true"] {
+  /*
+   To prevent user selecting inside the drag source
+  */
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
