--- a/src/style/component/_sidebar.scss
+++ b/src/style/component/_sidebar.scss
@@ -1,10 +1,11 @@
 .sidebar{
   position: relative;
   overflow-y: auto;
-  background: #f3f3f3;
+  background: #e9ecef;
   flex: none;
   width: 18rem;
   height: 100vh;
+  box-shadow: 0rem 0rem .3rem rgb(199, 199, 199);
   // @media (max-width:900px){
   //   display: none;
   // }
