1. 修改AreaSelect組件，變換page時，使用watch監聽以更換成不同的blocksIds陣列來做篩選，並可框選圖片 2. Img組件新增把來源圖片Ctrl + v貼上直接顯示圖片的功能，方法在commonEffect.js更新 3. 新增Modal組件，主要負責彈出視窗用，裡面內容請使用其他組件或者slot插入html 4. 新增Search組件，可輸入字串來篩選block的content的內容，Search插入Modal組件中 5. 新增Login組件， 可做到基本登入，還需做修改 6. db.js修改為firebase.js，增加驗證方法，目前可以靠google自動登入 7. Store的Index.js新增對應功能 8. 新增color.scss ，確定配色常用主機調

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,12 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&display=swap');
 
-input {
-  display: block;
-  color: #464646;
-}
 html {
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 14px;
+}
+
+body {
+  height: 100%;
+}
+
+input, textarea{
+  display: block;
+  color: #464646;
+  background: transparent;
+  border: none;
+  outline: none;
+  &:hover{
+    border: none;
+  }
+  &::placeholder{
+    color: #f3f3f3;
+  }
 }
 
 .pageblock{
@@ -23,11 +37,19 @@ html {
 }
 
 .bb{
-  border-bottom: .02rem solid #e4e4e4;
+  border-bottom: .01rem solid #4d454e;
 }
+
 .bb-light{
-  border-bottom: .02rem solid #f0f0f0;
+  border-bottom: .01rem solid #949494;
 }
+
+.bt{
+  border-top: .01rem solid #4d454e;
+}
+// .bb-light{
+//   border-bottom: .02rem solid #f0f0f0;
+// }
 .line-break{
   margin-bottom: 1rem;
 }
@@ -37,6 +59,8 @@ html {
 }
 
 .block-selected{
+  opacity: .7;
+  filter: grayscale(100%);
   background:rgba($color: rgb(131, 214, 235), $alpha: 0.2);
   border-radius: .2rem;
 }
