--- a/src/style/component/_sidebar.scss
+++ b/src/style/component/_sidebar.scss
@@ -1,11 +1,11 @@
 .sidebar{
   position: relative;
   overflow-y: auto;
-  background: #e9ecef;
+  background: #3A343B;
   flex: none;
   width: 18rem;
   height: 100vh;
-  box-shadow: 0rem 0rem .3rem rgb(199, 199, 199);
+  box-shadow: 0rem 0rem .3rem rgb(46, 46, 46);
   // @media (max-width:900px){
   //   display: none;
   // }
