--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -75,6 +76,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+$listhover:     #4d454e;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -88,7 +90,7 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
   "hex":        #69F0AE,
-  "listhover": #e0e0e0
+  "listhover":  $listhover,
 ) !default;
 // scss-docs-end theme-colors-map
 
