--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,6 @@
 @import '../../node_modules/bootstrap/scss/functions';
 @import './variables';
+@import './color.scss';
 @import '../../node_modules/bootstrap/scss/mixins';
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
