1. AreaSelect組件，判斷框選到的元素改用closest的方式選到最外層的block來判斷 2. Block組件的drag、drop事件，增加catch元素與target是否有group的複雜邏輯判斷 3. 多個組件新增transition漸變效果 4. 修改block的div架構(CSS) 5. 更改所有輸入的部分 textarea或者input全部變更為div，contenteditable=true，可自動調整高度更方便。 並修正CSS屬性 6. store的index.js增加group操作控制邏輯 7. base.scss更新基本的預設transition組件css以及其他更新 8. 改由workspace組件裡面控制mouse移動到某block而顯示DragItem的判斷，以及watch方法的判斷focus做修正 9. 新增ScaleController組件，可控制圖片或影片的縮放 10. 不用BulletList以及NumberList，改新增BulletItem以及NumberItem組件，群組關係用group包住，不用blocks包了 11. 新增分割線Dividingline組件 12. 新增TodoItem組件 13. 新增ToggleList組件，底下可以塞不同元素(此為用blocks包住)，並且邏輯判斷增加在Block組件的drag和drop邏輯裡面

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -9,9 +9,8 @@ body {
   height: 100%;
 }
 
-input, textarea{
-  display: block;
-  color: #464646;
+div[contenteditable=true] {
+  color: #494949;
   background: transparent;
   border: none;
   outline: none;
@@ -19,7 +18,68 @@ input, textarea{
     border: none;
   }
   &::placeholder{
-    color: #f3f3f3;
+    color: #a3a3a3;
+  }
+
+  &:empty:focus::before{
+    content: attr(placeholder);
+    color: #a3a3a3;
+  }
+  &:empty:not(:focus)::before{
+    content: '';
+  }
+  &::selection{
+    background-color: #bddaeb;
+  }
+}
+
+.v-enter-active,
+.v-leave-active{
+  transition: opacity 0.3s ease;
+}
+
+.v-enter-from,
+.v-leave-to{
+  opacity: 0;
+}
+
+.v-enter-to,
+.v-leave-from{
+  opacity: 1;
+}
+
+.p{
+  padding-top: .1rem;
+  padding-left: .5rem;
+  line-height: 1.8rem;
+}
+
+$drag-width: 1.5rem;
+.block{
+  position: relative;
+  &-content{
+    width: 100%;
+  }
+  &-drag{
+    position: absolute;
+    left: -$drag-width;
+    width: $drag-width;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    
+  }
+  &-border-top{
+    border-top: .1rem dashed rgb(173, 173, 173);
+  }
+  &-border-bottom{
+    border-bottom: .1rem dashed rgb(173, 173, 173);
+  }
+  &-selected{
+    opacity: .9;
+    filter: grayscale(100%);
+    background:rgba($color: rgb(131, 214, 235), $alpha: 0.2);
+    border-radius: .2rem;
   }
 }
 
@@ -58,12 +118,6 @@ input, textarea{
   font-weight: 700;
 }
 
-.block-selected{
-  opacity: .7;
-  filter: grayscale(100%);
-  background:rgba($color: rgb(131, 214, 235), $alpha: 0.2);
-  border-radius: .2rem;
-}
 
 [draggable="true"] {
   /*
