1. 根組件App.vue新增登入登出判斷邏輯。 firebase Auth判斷登入狀態，登入後，firestore資料存入store中，順便更改路由; 登出後刪除 2. dragdrop邏輯從Block組建中抽離 3. 包裝contenteditable成一個組件，再創BlockEditable以及PageEditable去做修改 4. 使用Vue router ，曾家路由守衛，控制登入後判斷去哪個頁面 5. Search組件小修改(未完成) 6. 增加文字編輯StyleTool組件，(未完成且有問題) 7. 增加CodeEditor組件，code編輯器，目前tab鍵可以縮排的功能有問題，尚須做修改 8. 增加watchStoreEffect.js邏輯，使用store的subscribe觀測每次的mutataion，並且更新最後編輯日期 9. 其餘版面類組建增加 含 Userfield、UserInfo、SignIn、Register等 10. Workspace增加pageInfo組件，增加初次編輯時間、最後編輯時間、標籤功能

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
 
 html {
   font-family: 'Noto Sans TC', sans-serif;
@@ -9,7 +9,25 @@ body {
   height: 100%;
 }
 
-div[contenteditable=true] {
+a {
+  text-decoration: none;
+}
+
+.fullscreen {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  margin: auto;
+  z-index: 4;
+  background: $coffee;
+}
+
+input,
+div[contenteditable] {
+  width: 100%;
   color: #494949;
   background: transparent;
   border: none;
@@ -48,12 +66,6 @@ div[contenteditable=true] {
   opacity: 1;
 }
 
-.p{
-  padding-top: .1rem;
-  padding-left: .5rem;
-  line-height: 1.8rem;
-}
-
 $drag-width: 1.5rem;
 .block{
   position: relative;
@@ -80,6 +92,23 @@ $drag-width: 1.5rem;
     filter: grayscale(100%);
     background:rgba($color: rgb(131, 214, 235), $alpha: 0.2);
     border-radius: .2rem;
+  }
+}
+
+$p-height: 1.8rem;
+$p-margin: .2rem 0;
+.p {
+  color: #646464 !important;
+  line-height: $p-height;
+  overflow: auto;
+  margin: $p-margin;
+  padding-left: .1rem;
+  &-prefix{
+    width: 1rem;
+    line-height: $p-height;
+    height: $p-height;
+    margin: .2rem .5rem .2rem .2rem;
+    padding-left: .2rem;
   }
 }
 
