--- a/src/style/color.scss
+++ b/src/style/color.scss
@@ -16,3 +16,41 @@ $web-orange:    #F49F0A;
 .text-web-orange{
   color: $web-orange;
 }
+
+// 其他顏色
+$paradise-pink:  #EF476F;
+$orange-golden: #BB4430;
+$mystic: #D34F73;
+$orchid: #D664BE;
+$spanish-blue: #016FB9;
+$dodger-blue: #2191FB;
+$bitter-lemon: #C1DF1F;
+$black-shadows: #BAA7B0;
+
+$forest-green: #104911;
+
+
+
+// 樸素
+$light-steel-blur: #AEC5EB;
+$silver-pink: #CEABB1;  // 有點土
+$yellow-green:   #BCE784;
+
+
+// 可以當深色字體用
+$old-rose: #AA767C;
+
+// 很可以
+$tea-green:      #D7EBBA;
+$light-pink:     #fac3cd;
+$beau-blue: #c5d9e4;
+$floral-white: #fac9c9;
+$nation-blue : #c2d1f1;
+$old-rose: #faeca5;
+
+
+// 太暗
+$purple-mountain:#8D80AD;
+
+
+
