// 此次為小修改 1. 版面的重新設計、頁底已設計好 2. 更改scrollbar樣式 3. 增加收合sidebar功能，並且有順暢動畫 4. 註冊以及登入組件增加輸入錯誤判斷警告 5. Breadcrumb組件更改為最多旁邊顯示2個父頁面的顯示 6. 增加HoverButton組件，未碰到前隱藏、碰到後顯示，點擊觸發callback，使用者可自訂callback內容 ; class可自訂 7. 抽離登入以及註冊共通邏輯為userVerifyEffect.js

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -28,7 +28,9 @@ a {
 input,
 div[contenteditable] {
   width: 100%;
-  color: #494949;
+  // color: #494949;
+  // color: #645b66;
+  color: #584d58;
   background: transparent;
   border: none;
   outline: none;
@@ -49,6 +51,27 @@ div[contenteditable] {
   &::selection{
     background-color: #bddaeb;
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3a343b; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #555; 
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888; 
 }
 
 .v-enter-active,
