--- a/src/style/component/_customlist-group.scss
+++ b/src/style/component/_customlist-group.scss
@@ -1,7 +1,6 @@
 .customlist-group {
   display: flex;
   flex-direction: column;
-  padding-bottom: 1rem;
   margin-bottom: 1rem;
   overflow: auto;
 }
@@ -9,64 +8,71 @@
 
 // 單個list (裡面可塞多個東西)
 .customlist-group-item {
+  // font-weight: 700;
+  line-height: 2rem;
   position: relative;
   display: flex;
-  padding: 0.2rem $list-group-item-padding-x;
-  color: $list-group-color;
+  padding: 0 1rem;
+  // color: #969293;
+  color: #8a8687;
   text-decoration: if($link-decoration == none, null, none);
-  background-color: $list-group-bg;
-  // border: $list-group-border-width solid $list-group-border-color;
-
-  &.disabled,
-  &:disabled {
-    color: $list-group-disabled-color;
-    pointer-events: none;
-    background-color: $list-group-disabled-bg;
+  &:hover,
+  &:focus{
+    background: #5c525e;
+    color: #c9c0c2;
   }
 
-  // Include both here for `<a>`s and `<button>`s
-  &.active {
-    z-index: 2; // Place active items above their siblings for proper border styling
-    color: $list-group-active-color;
-    background-color: rgb(243, 73, 73);
-    // background-color: $list-group-active-bg;
-    // border-color: $list-group-active-border-color;
+  &:active{
+    background: #716574;
   }
 
-  & + & {
-    border-top-width: 0;
-
-    &.active {
-      margin-top: -$list-group-border-width;
-      // border-top-width: $list-group-border-width;
-    }
-  }
 }
 
 .customlist-group-item-action {
-  width: 100%; // For `<button>`s (anchors become 100% by default though)
-  color: $list-group-action-color;
-  text-align: inherit; // For `<button>`s (anchors inherit)
-
-  // Hover state
-  &:hover,
-  &:focus {
-    z-index: 1; // Place hover/focus items above their siblings for proper border styling
-    color: $list-group-action-hover-color;
-    text-decoration: none;
-    background-color: $listhover;
-  }
-
-  &:active {
-    color: $list-group-action-active-color;
-    background-color: $list-group-action-active-bg;
-  }
+  background: #5c525e;
+  color: #c9c0c2 !important;
 }
 
-// 單個list裡面的文字
-.customlist-item {
-  // font-weight: 100;
-  padding-left: .25rem;
-  padding-right: .25rem;
-  color: #969293;
+// 單個list裡面的文字'
+@for $i from 1 to 7 {
+  .customlist-item-#{$i} {
+    // font-weight: 100;
+    width: $i * 1.5 + rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    // color: #969293;
+  }
 }
+.customlist-item-name{
+  height: 2rem;
+  width: calc(100% - 6.5rem);
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+// &.disabled,
+  // &:disabled {
+  //   color: $list-group-disabled-color;
+  //   pointer-events: none;
+  //   background-color: $list-group-disabled-bg;
+  // }
+
+  // Include both here for `<a>`s and `<button>`s
+  // &.active {
+  //   z-index: 2; // Place active items above their siblings for proper border styling
+  //   color: $list-group-active-color;
+  //   background-color: rgb(243, 73, 73);
+  //   // background-color: $list-group-active-bg;
+  //   // border-color: $list-group-active-border-color;
+  // }
+
+  // & + & {
+  //   border-top-width: 0;
+
+  //   &.active {
+  //     margin-top: -$list-group-border-width;
+  //     // border-top-width: $list-group-border-width;
+  //   }
+  // }
