1. 改為資料更新都存入FS 2. 新增引言組件 3. 增加滑鼠點擊blockcontent區塊就增加block 4. 增加根據視窗大小，自動調整sidebar顯示方式，以及變成浮動sidebar或者固定sidebar(sidebarState的isCollapse和isFloating) 5. 增加剛開啟網頁，sidebar自動滑出特效 6. watchStoreEffect增加自動判斷pageHistory的增減以及sidebar的作動 7. store中pageHistorey的修改並更為在userInfo中(pageHistory移至userInfo)

--- a/src/style/component/_sidebar.scss
+++ b/src/style/component/_sidebar.scss
@@ -1,12 +1,14 @@
 .sidebar{
   position: relative;
+  background-color: #433c44;
   z-index: 2;
-  background: #433c44;
   overflow: hidden;
   flex: none;
   width: 23rem;
   height: 100vh;
   box-shadow: .05rem 0rem .2rem .05rem rgb(160, 160, 160);
+  // -webkit-transition: all 0.5s ease-in-out;
+  // transition: all 0.5s ease-in-out;
   &-footer{
     position: absolute;
     bottom: 0;
@@ -14,6 +16,11 @@
     right: 0;
     overflow-x: hidden;
   }
+}
+
+.sidebar-float{
+  position: absolute !important;
+  background-color: rgba($color: #433c44, $alpha: 0.96);
 }
 
 .field-title{
