***此次更新僅dragdrop功能之改寫
1. 不使用dragDropActionInBlocks.js了，太複雜 ，
2. 重寫drag、drop  移動block功能 。新增updateIDsEffectByDragDrop.js 每次移動僅更新ids響應式數據，並回傳此
3. 組件使用位置不該在Block組件中使用，更改為Workspace組件中使用
4. 使用此ids更新page的blocks
5. 樣式的更新(Block的底下藍線)使用響應式數據currentIdUnderTheMouse來判斷

--- a/src/style/component/_block.scss
+++ b/src/style/component/_block.scss
@@ -1,9 +1,10 @@
 $drag-width: 1.5rem;
-$block-border: .2rem dashed rgb(141, 184, 219);
+$block-border: .2rem dashed rgb(134, 193, 241);
 .block{
   // margin: .3rem 0;
   position: relative;
-  display: flex;  
+  display: flex; 
+  box-sizing: border-box; 
 
   &-content{
     width: 100%;
