--- a/src/style/component/_block-type.scss
+++ b/src/style/component/_block-type.scss
@@ -15,11 +15,11 @@ $margin-default: .2rem 0;
   }
 
   &-video {
-    margin: 1rem 0;
+    margin: .4rem 0;
   }
 
   &-img {
-    margin: 1rem 0;
+    margin: .4rem 0;
   }
 
   &-p {
