--- a/src/style/prism.css
+++ b/src/style/prism.css
@@ -3,8 +3,8 @@
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
-code[class*="language-"],
-pre[class*="language-"] {
+
+code[class*="language-"], pre[class*="language-"] {
 	color: black;
 	background: none;
 	text-shadow: 0 1px white;
@@ -16,60 +16,54 @@ pre[class*="language-"] {
 	word-break: normal;
 	word-wrap: normal;
 	line-height: 1.5;
-
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	tab-size: 4;
-
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
 	text-shadow: none;
-	background: #b3d4fc;
+	/* background: #b3d4fc; */
+	background: rgb(245, 242, 240);
 }
 
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection, code[class*="language-"]::selection, code[class*="language-"] ::selection {
 	text-shadow: none;
-	background: #b3d4fc;
+	/* background: #b3d4fc; */
+	background: rgb(245, 242, 240);
 }
 
 @media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
+	code[class*="language-"], pre[class*="language-"] {
 		text-shadow: none;
 	}
 }
 
 /* Code blocks */
+
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-	/* background: #f5f2f0; */
-	background: #f3eeeb;
+:not(pre)>code[class*="language-"], pre[class*="language-"] {
+	background: #f1eeec;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+
+:not(pre)>code[class*="language-"] {
 	padding: .1em;
 	border-radius: .3em;
 	white-space: normal;
 }
 
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
+.token.comment, .token.prolog, .token.doctype, .token.cdata {
 	color: slategray;
 }
 
@@ -81,56 +75,36 @@ pre[class*="language-"] {
 	opacity: .7;
 }
 
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
+.token.property, .token.tag, .token.boolean, .token.number, .token.constant, .token.symbol, .token.deleted {
 	color: #905;
 }
 
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
+.token.selector, .token.attr-name, .token.string, .token.char, .token.builtin, .token.inserted {
 	color: #690;
 }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
+.token.operator, .token.entity, .token.url, .language-css .token.string, .style .token.string {
 	color: #9a6e3a;
 	/* This background color was intended by the author of this theme. */
 	background: hsla(0, 0%, 100%, .5);
 }
 
-.token.atrule,
-.token.attr-value,
-.token.keyword {
+.token.atrule, .token.attr-value, .token.keyword {
 	color: #07a;
 }
 
-.token.function,
-.token.class-name {
+.token.function, .token.class-name {
 	color: #DD4A68;
 }
 
-.token.regex,
-.token.important,
-.token.variable {
+.token.regex, .token.important, .token.variable {
 	color: #e90;
 }
 
-.token.important,
-.token.bold {
+.token.important, .token.bold {
 	font-weight: bold;
 }
+
 .token.italic {
 	font-style: italic;
 }
