1.完善codeEditor組件功能，已可做到多行tab換行、貼上程式碼，並且顯示高亮程式碼 2.增加codeEditorEffect.js
目前尚有刪除page會出問題的bug需解決

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -78,7 +78,8 @@ div[contenteditable] {
     content: '';
   }
   &::selection{
-    background-color: #bddaeb;
+    background-color:rgba($color: #4ab8f8, $alpha: 0.3)
+    // background-color: #bddaeb;
   }
 }
 
