暫時把FB和Twitter登入的功能關掉(有問題)

--- a/src/style/component/_verification.scss
+++ b/src/style/component/_verification.scss
@@ -52,9 +52,9 @@ form{
 
 .brand{
   color: rgb(97, 97, 97);
+  // padding: 0 .3rem;
+  border-radius: 3px;
   &:hover{
-    // border: .2rem solid #272727;
-    // background: #222222;
     color: $persian-green;
   }
 }
